[gd_scene load_steps=8 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Graphics/backgrounds/cave_entrance.png" type="Texture" id=2]
[ext_resource path="res://Objects/Misc/Fog.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/BLKCHCRY.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/BLKCHCRY_outlined.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.588235 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="Fog" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.294118 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 59.0
margin_top = 187.0
margin_right = 309.0
margin_bottom = 587.0
rect_min_size = Vector2( 250, 400 )
alignment = 1

[node name="NewGameBtn" type="Button" parent="Buttons"]
margin_top = 94.0
margin_right = 250.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "New Game"

[node name="LoadGameBtn" type="Button" parent="Buttons"]
margin_top = 148.0
margin_right = 250.0
margin_bottom = 198.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Load"

[node name="CreditsBtn" type="Button" parent="Buttons"]
margin_top = 202.0
margin_right = 250.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Credits"

[node name="EndGameBtn" type="Button" parent="Buttons"]
margin_top = 256.0
margin_right = 250.0
margin_bottom = 306.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
text = "Quit"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -255.5
margin_top = 50.0
margin_right = 255.5
margin_bottom = 131.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Delve the Darkness"

[node name="Subtitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -75.0
margin_top = 118.0
margin_right = 764.0
margin_bottom = 199.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A Game for the 4th Buddy-Jam"

[connection signal="mouse_entered" from="Buttons/NewGameBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="Buttons/NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="mouse_entered" from="Buttons/LoadGameBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="Buttons/LoadGameBtn" to="." method="_on_LoadGameBtn_pressed"]
[connection signal="mouse_entered" from="Buttons/CreditsBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="Buttons/CreditsBtn" to="." method="_on_CreditsBtn_pressed"]
[connection signal="mouse_entered" from="Buttons/EndGameBtn" to="." method="_on_Btn_mouse_entered"]
[connection signal="pressed" from="Buttons/EndGameBtn" to="." method="_on_EndGameBtn_pressed"]
